export interface UserId {
  readonly value: string
}
